# ARM-ML-Challenge

./: .gitignore  CHALLENGE.md  LICENSE  README.md  package-lock.json  package.json
api/: app.py  pyproject.toml
api/lib/: analyser.py  cache.py  file.py  prompt.py
app/: layout.tsx  page.module.css  page.tsx
app/components/: CodeHighlightAdapter.tsx  ComplexityResultsPage.tsx
app/lib/: types.tsx
app/results/: page.tsx
tests/: example_java.java  example_js.js  example_python.py  example_python.txt
