[project]
name = "arm-mock"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.116.1",
    "loguru>=0.7.3",
    "openai>=1.100.0",
    "pydantic>=2.11.7",
    "uvicorn>=0.35.0",
]

[tool.uv.workspace]
members = ["code-analyser/api"]

[dependency-groups]
dev = [
    "ruff>=0.12.10",
]
